// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly based on the theme props 1`] = `
<button
  class="rmd-button rmd-button--text"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 2`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 3`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 4`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-primary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 5`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--primary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 6`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 7`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-secondary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 8`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--secondary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 9`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 10`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-warning"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 11`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--warning"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 12`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 13`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-error"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 14`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--error"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 15`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-error rmd-button--outline-error"
  data-testid="button"
  type="button"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 16`] = `
<button
  class="rmd-button rmd-button--icon"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 17`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 18`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 19`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-primary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 20`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--primary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 21`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 22`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-secondary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 23`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--secondary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 24`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 25`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-warning"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 26`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--warning"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 27`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 28`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-error"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 29`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--error"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 30`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-error rmd-button--outline-error"
  data-testid="button"
  type="button"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;
